Fixed CSS/JS url paths, CSS subMenuBtnText removed padding left and added text-align: center, Added NL language to all existing page's.

--- a/templates/iRail/css/main.css
+++ b/templates/iRail/css/main.css
@@ -276,8 +276,8 @@ body {
 }
 .subMenuBtnText{
     padding-top: 5px;
-    padding-left: 15px;
     cursor: pointer;
+    text-align: center;
 }
 
 .containerMenu{
